--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
         <title>12bool</title>
     </head>
     <body>
+        <div class="row">
+            <div class="col-xs-12 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-12 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-12 col-md-4 col-lg-3 sfondo-foot" ></div>
+        </div>
 
     </body>
 </html>
