--- a/index.html
+++ b/index.html
@@ -9,17 +9,21 @@
     </head>
     <body>
         <div class="row">
-            <div class="col-xs-12 col-md-4 col-lg-3"></div>
+            <div class="col-xs-12 col-md-12 col-lg-12 top"></div>
             <div class="col-xs-6 col-md-4 col-lg-3"></div>
             <div class="col-xs-6 col-md-4 col-lg-3"></div>
             <div class="col-xs-6 col-md-4 col-lg-3"></div>
+            <div class="col-xs-6 col-md-4 col-md-offset-4 col-lg-3"></div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-md-12 col-lg-12"></div>
             <div class="col-xs-6 col-md-4 col-lg-3"></div>
-            <div class="col-xs-12 col-md-4 col-lg-3"></div>
             <div class="col-xs-6 col-md-4 col-lg-3"></div>
             <div class="col-xs-6 col-md-4 col-lg-3"></div>
-            <div class="col-xs-6 col-md-4 col-lg-3"></div>
-            <div class="col-xs-6 col-md-4 col-lg-3"></div>
-            <div class="col-xs-12 col-md-4 col-lg-3 sfondo-foot" ></div>
+            <div class="col-xs-6 col-md-4 col-md-offset-4 col-lg-3"></div>
+        </div>
+        <div>
+            <div class="col-xs-12 col-md-12 col-lg-12 foot"></div>
         </div>
 
     </body>
